--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
-name: Build
+name: release
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["main"]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -21,10 +26,31 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      # This is needed to be able to run ./gradlew below
-      # You can run `git update-index --chmod +x gradlew` then remove this step.
       - name: Make Gradle wrapper executable
         run: chmod +x ./gradlew
 
+      - name: Read version from gradle.properties
+        id: get_version
+        run: |
+          VERSION=$(grep "mod_version" gradle.properties | cut -d'=' -f2 | tr -d '[:space:]')
+          echo "Detected version: $VERSION"
+          echo "MOD_VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Update Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: v${{ env.MOD_VERSION }}
+          name: Release v${{ env.MOD_VERSION }}
+          commit: ${{ github.sha }}
+
+          allowUpdates: true
+          replacesArtifacts: true
+          makeLatest: true
+
+          artifacts: "build/libs/*.jar"
+
+          token: ${{ secrets.GITHUB_TOKEN }}
+        if: success()
