--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: v${{ env.MOD_VERSION }}
-          name: Release v${{ env.MOD_VERSION }}
+          name: v${{ env.MOD_VERSION }}
           commit: ${{ github.sha }}
 
           allowUpdates: true
