--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -51,7 +51,7 @@ all the small things
 
 # The [[mixins]] block allows you to declare your mixin config to FML so that it gets loaded.
 [[mixins]]
-config="${mod_id}.mixins.json"
+config="utm.mixins.json"
 
 # The [[accessTransformers]] block allows you to declare where your AT file is.
 # If this block is omitted, a fallback attempt will be made to load an AT from META-INF/accesstransformer.cfg
@@ -105,3 +105,5 @@ config="${mod_id}.mixins.json"
 # EMI
 
 # SOPHISTICATED BACKPACKS
+
+modConstructor="com.nadia.utm.utm"
