--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ neoForge {
             programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
         }
     }
+
+    mods {
+        utm {sourceSet sourceSets.main}
+    }
 }
 
 dependencies {
