--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -15,7 +15,7 @@ description='''
 all the small things.
 
 utility & compat mod between various mods (see deps.)
-automatically updates from github, disablable in config (though, if working with servers I wouldn't reccommend it.
+automatically updates from github, disablable in config (though, if working with servers I wouldn't recommend it.
 '''
 
 [[mixins]]
