--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ neo_version=21.1.218
 mod_id=utm
 mod_name=utm
 mod_license=All Rights Reserved
-mod_version=0.0.1-dev20
+mod_version=0.0.1-pre20
 mod_group_id=com.nadia.utm
 
 ## CREATE
