--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -104,3 +104,11 @@ type="optional"
 versionRange=","
 ordering="AFTER"
 side="CLIENT"
+
+# GRAVESTONES
+[[dependencies.${mod_id}]]
+modId="gravestone"
+type="optional"
+versionRange=","
+ordering="AFTER"
+side="CLIENT"
