--- a/build.gradle
+++ b/build.gradle
@@ -95,14 +95,17 @@ dependencies {
     // EMI+JEI
     compileOnly("dev.emi:emi-neoforge:${emi_version}:api")
     runtimeOnly("dev.emi:emi-neoforge:${emi_version}")
-    compileOnly("mezz.jei:jei-1.21-neoforge-api:${jei_version}")
-    runtimeOnly("mezz.jei:jei-1.21-neoforge:${jei_version}")
+    compileOnly("mezz.jei:jei-1.21.1-neoforge-api:19.27.0.340")
+    runtimeOnly("maven.modrinth:u6dRKJwZ:YAcQ6elZ")
 
     jarJar(implementation("maven.modrinth:5IIKsxiL:KXmiEin1")) // extreme sound muffler
     implementation("maven.modrinth:rVUtrHuM:uUy23VAp") // backported spears
     implementation("maven.modrinth:P5Jjjezm:AD6eBCKn") // showcase item
     compileOnly("maven.modrinth:s9gIPDom:yXFi1fed") // figura
     implementation("maven.modrinth:RYtXKJPr:AZm51eX1") // gravestones
+    implementation("maven.modrinth:TyCTlI4b:ovVp31Ci") // sophisticated backpacks
+    implementation("maven.modrinth:nmoqTijg:23alQult") // sophisticated core
+    jarJar(implementation("maven.modrinth:s85zLEDe:bWd7B59k")) // sophisticated backpacks x create
 }
 
 def replaceProperties = [
