--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,5 @@ public-f net.minecraft.client.renderer.RenderType GLINT_TRANSLUCENT
 public-f net.minecraft.client.renderer.RenderType ENTITY_GLINT
 public-f net.minecraft.client.renderer.RenderType ENTITY_GLINT_DIRECT
 public-f net.minecraft.client.renderer.RenderType ARMOR_ENTITY_GLINT
+public-f net.minecraft.client.model.ElytraModel leftWing
+public-f net.minecraft.client.model.ElytraModel rightWing
