--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.dev"
     }
+    repositories {
+        maven {
+            name = "Illusive Soulworks maven"
+            url = "https://maven.theillusivec4.top/"
+        }
+    }
 }
 
 neoForge {
@@ -108,6 +114,10 @@ dependencies {
     implementation("maven.modrinth:sophisticated-core:23alQult") // sophisticated core
     jarJar(implementation("maven.modrinth:sophisticated-backpacks-create-integration:bWd7B59k")) // sophisticated backpacks x create
     jarJar(implementation('local:grimble_mod:1.0.0')) // bluebibbob's grimble mod
+
+    // curios
+    compileOnly "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1:api"
+    runtimeOnly "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
 }
 
 def replaceProperties = [
